<resources>
    <string name="app_name">Xperiencurity</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="subject">Subject</string>
    <string name="your_message">Your message</string>
    <string name="would_you_like_a_follow_up_to_this_feedback">Would you like a follow up to this feedback?</string>
    <string name="would_you_like_a_follow_up_to_this_bug_report">Would you like a follow up to this bug report?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="submit">SUBMIT</string>
    <string name="xperiencurity_support_center">Xperiencurity Support Center</string>
    <string name="please_select_one_of_the_options_for_relevant_services">Please select one of the options for relevant
        services
    </string>
    <string name="feedback">Feedback</string>
    <string name="bug_report">Bug Report</string>
    <string name="checkforupdates">CHECK FOR UPDATES</string>
    <string name="devicename">Device Name</string>
    <string name="devicedescription">Some description here</string>
    <string name="support_page">Support page</string>
    <string name="dashboard">Dashboard</string>
    <string name="data_filter">Data filter</string>
    <string name="add_device">Add device</string>
    <string name="remove_device">Remove device</string>
    <string name="view_logs">View logs</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="alarm">Alarm</string>
    <string name="camera">Camera</string>
    <string name="lights">Lights</string>
    <string name="speakers">Speakers</string>
    <string name="thermostats">Thermostats</string>
    <string name="tvs">TVs</string>
    <string name="login">Login</string>
    <string name="insert_id">Insert ID</string>
    <string name="insert_password">Insert password</string>
    <string name="register">Register</string>
    <string name="register_account">Register Account</string>
    <string name="enter_id">Enter ID</string>
    <string name="re_enter_id">Re-enter ID</string>
    <string name="enter_password">Enter password</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="logName">Log Name</string>
    <string name="save">Save</string>
    <string name="device_type">Device Type</string>
    <string name="device_version">Device Version</string>
    <string name="device_brand">Device Brand</string>
    <string name="device_name">Device name</string>
    <string name="device_description">Device description</string>
    <string name="options">Options</string>
    <string name="data_logging">Data logging</string>
    <string name="location_tracking">Location tracking</string>
    <string name="history_tracking">History tracking</string>
    <string name="ad_sense">Ad sense</string>
    <string name="no_device_exists_for_this_category">No device exists for this category</string>
    <string name="statistic">Statistic</string>
    <string name="device_status">Device status</string>
    <string name="mode_of_device">Mode of device</string>
    <string name="smoke_detector">Smoke detector</string>
    <string name="lock_system">Lock system</string>
    <string name="on">On</string>
    <string name="auto">Auto</string>
    <string name="_50">50%</string>
    <string name="armed">Armed</string>
    <string name="locked">Locked</string>
    <string name="recording_resolution">Recording resolution</string>
    <string name="night_mode">Night mode</string>
    <string name="motion_detector">Motion detector</string>
    <string name="camera_view">Camera view</string>
    <string name="_720p">720p</string>
    <string name="imageobtainedbycctv">imageobtainedbycctv</string>
    <string name="brightness_level">Brightness level</string>
    <string name="rgb">RGB</string>
    <string name="voice_control">Voice control</string>
    <string name="radio">Radio</string>
    <string name="edward">Edward</string>
    <string name="device_linked_to">Device linked to</string>
    <string name="volume">Volume</string>
    <string name="temperature">Temperature</string>
    <string name="ambient_temperature">Ambient temperature</string>
    <string name="auto_a_c">Auto A/C</string>
    <string name="_30_c">30°C</string>
    <string name="_28_c">28°C</string>
    <string name="graph_view_of_thermostat">Graph view of thermostat</string>
    <string name="imageviewofgraph">imageviewofgraph</string>
    <string name="david">David</string>
    <string name="_25">25%</string>
    <string name="smart_mode">Smart mode</string>
    <string name="hash_verification">Hash verification</string>

    <string name="tab_text">Hash a text</string>
    <string name="tab_file">Hash a file</string>
    <string name="tab_compare">Compare hashes</string>
    <string name="input_txt">Input the text to hash :</string>
    <string name="Text">Text : %1$s\n</string>
    <string name="FileName">Name : %1$s\n</string>
    <string name="FileSize">Size : %1$s\n</string>
    <string name="FileDateModified">Date modified : %1$s %2$s\n</string>
    <string name="Hash">%1$s checksum : %2$s</string>
    <string name="but_title_select_file">Click here to select the file to hash</string>
    <string name="cb_upper_case">Result in upper case</string>
    <string name="unable_to_calculate">Unable to calculate the checksum of %1$s</string>
    <string name="wrong_file">The file does not exist</string>
    <string name="calculate_but">Calculate</string>
    <string name="clear_but">Clear</string>
    <string name="copy_but">Copy checksum to clipboard</string>
    <string name="Ok_but">OK</string>
    <string name="Cancel_but">Cancel</string>
    <string name="Yes_but">Yes</string>
    <string name="No_but">No</string>
    <string name="Close_but">Close</string>
    <string name="copied">Hash copied to clipboard</string>
    <string name="label_menu_about">About</string>
    <string name="label_menu_rateit">Rate it</string>
    <string name="label_menu_help">Help</string>
    <string name="up_one_level">..</string>
    <string name="selectedfile_confirmation">Do you want to compute the file %1$s ?</string>
    <string name="selectedfile_error">%1$s cannot be read !</string>
    <string name="AlgoList">Select a hash function :</string>
    <string name="Calculating">Calculating&#8230;</string>
    <string-array name="Algo_Array">
        <item>Adler-32</item>
        <item>CRC-32</item>
        <item>Haval-128</item>
        <item>MD2</item>
        <item>MD4</item>
        <item>MD5</item>
        <item>RIPEMD-128</item>
        <item>RIPEMD-160</item>
        <item>SHA-1</item>
        <item>SHA-256</item>
        <item>SHA-384</item>
        <item>SHA-512</item>
        <item>Tiger</item>
        <item>Whirlpool</item>
    </string-array>
    <string name="input_txt1">Input the first hash value :</string>
    <string name="input_txt2">Input the second hash value :</string>
    <string name="compare_but">Compare</string>
    <string name="IdenticalHashes">Hashes match !</string>
    <string name="DifferentHashes">Hashes do not match !</string>
    <string name="verify_hash">Verify Hash</string>
    <string name="no_devices_found">No devices found</string>
    <string name="back">Back</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_email">Enter email</string>
    <string name="insert_email">Insert email</string>
    <string name="support">Support</string>
</resources>
