<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterPage">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="380dp">
            <TextView
                    android:text="@string/register_account"
                    android:layout_width="match_parent"
                    android:layout_height="168dp" android:textSize="36sp" android:id="@+id/regdisplay"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:hint="@string/enter_id" android:autofillHints="" tools:targetApi="o"
                    android:id="@+id/textid"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/textEmail" android:hint="@string/enter_email" android:importantForAutofill="no" tools:targetApi="o"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/textpw" android:hint="@string/enter_password" android:autofillHints="" tools:targetApi="o"/>
        </LinearLayout>
        <Button
                android:text="@string/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/regbtn"/>
        <Button
                android:text="@string/back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/backbtn" android:onClick="clickBack"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>