<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"
            android:paddingLeft="12dp" android:paddingRight="12dp">
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/support_page" android:layout_marginTop="25dp"
                android:background="@color/colorBackground"
                android:contentDescription="@string/support_page" android:layout_marginStart="20dp"
                app:srcCompat="@drawable/xperiencurity"
                android:layout_marginBottom="20dp"/>
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="vertical">
                <Button
                        android:text="@string/dashboard"
                        android:layout_width="match_parent"
                        android:layout_height="59dp" android:id="@+id/dashboard"
                        android:drawablePadding="20dp"
                        android:textIsSelectable="false" android:textAlignment="textStart"
                        android:layout_marginTop="8dp" android:drawableStart="@drawable/sharp_phonelink_white_24"
                        android:onClick="clickDashboard"/>
                <Button
                        android:text="@string/data_filter"
                        android:layout_width="match_parent"
                        android:layout_height="60dp" android:id="@+id/data_filter" android:drawablePadding="20dp"
                        android:drawableStart="@drawable/sharp_security_white_24" android:textAlignment="textStart"
                        android:onClick="clickDataFilter"/>
                <Button
                        android:text="@string/add_device"
                        android:layout_width="match_parent"
                        android:layout_height="60dp" android:id="@+id/add_device" android:drawablePadding="20dp"
                        android:drawableStart="@drawable/sharp_add_circle_outline_white_24"
                        android:textAlignment="textStart" android:onClick="clickAddDevice"/>
                <Button
                        android:text="@string/remove_device"
                        android:layout_width="match_parent"
                        android:layout_height="60dp" android:id="@+id/remove_device" android:drawablePadding="20dp"
                        android:drawableStart="@drawable/sharp_remove_circle_outline_white_24"
                        android:textAlignment="textStart" android:onClick="clickRemoveDevice"/>
                <Button
                        android:text="@string/view_logs"
                        android:layout_width="match_parent"
                        android:layout_height="60dp" android:id="@+id/view_logs" android:drawablePadding="20dp"
                        android:drawableStart="@drawable/sharp_view_list_white_24" android:textAlignment="textStart"
                        android:onClick="clickViewLogs"/>
                <Button
                        android:text="@string/hash_verification"
                        android:layout_width="match_parent"
                        android:layout_height="60dp" android:id="@+id/hash_verification" android:drawablePadding="20dp"
                        android:drawableStart="@drawable/round_filter_none_white_24" android:textAlignment="textStart"
                        android:onClick="clickHashVerification"/>
                <Button
                        android:text="@string/check_for_updates"
                        android:layout_width="match_parent"
                        android:layout_height="60dp" android:id="@+id/check_for_updates"
                        android:drawablePadding="20dp" android:drawableStart="@drawable/sharp_autorenew_white_24"
                        android:textAlignment="textStart" android:onClick="clickUpdates"/>
                <Button
                        android:text="@string/settings"
                        android:layout_width="match_parent"
                        android:layout_height="60dp" android:id="@+id/settings"
                        android:drawablePadding="20dp"
                        android:drawableStart="@drawable/sharp_settings_white_24" android:textAlignment="textStart"
                        android:onClick="clickSupport"/>
                <Button
                        android:text="@string/logout"
                        android:layout_width="match_parent"
                        android:id="@+id/logout" android:layout_height="60dp" android:drawablePadding="20dp"
                        android:drawableStart="@drawable/sharp_exit_to_app_white_24" android:textAlignment="textStart"
                        android:onClick="clickLogout"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
