<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".BugReport"
                                                   tools:layout_editor_absoluteY="81dp" tools:layout_editor_absoluteX="16dp">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/fullName" android:hint="@string/full_name"
            android:singleLine="true" android:autofillHints=""
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/emailAddress" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailAddress" android:hint="@string/email_address"
            android:autofillHints=""
            app:layout_constraintTop_toBottomOf="@+id/fullName" android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/subject"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/subject"
            android:inputType="textEmailSubject" android:hint="@string/subject"
            android:autofillHints=""
            app:layout_constraintTop_toBottomOf="@+id/emailAddress" android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/yourMessage"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/yourMessage"
            android:gravity="top"
            android:hint="@string/your_message" android:autofillHints=""
            app:layout_constraintTop_toBottomOf="@+id/subject" android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/radGroupFollow"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/radGroupFollow"
            app:layout_constraintTop_toBottomOf="@+id/yourMessage" android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/submitBtn"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:layout_marginRight="8dp">
        <TextView
                android:text="@string/would_you_like_a_follow_up_to_this_feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="314dp"
                tools:layout_editor_absoluteX="8dp" android:id="@+id/wouldYou"/>
        <RadioButton
                android:text="@string/yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radYes" android:layout_weight="1"
        />
        <RadioButton
                android:text="@string/no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radNo" android:layout_weight="1"
        />
    </RadioGroup>
    <Button
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submitBtn"
            app:layout_constraintTop_toBottomOf="@+id/radGroupFollow"
            android:layout_marginBottom="48dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498" android:onClick="submitFeedback"/>
</androidx.constraintlayout.widget.ConstraintLayout>