<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DataFilter">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        <SearchView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_margin="10dp">
        </SearchView>
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                >
                    <Button
                            android:text="@string/alarm"
                            android:layout_width="fill_parent"
                            android:layout_height="match_parent" android:id="@+id/alarm"
                            android:drawableTop="@drawable/round_alarm_white_48"
                            android:layout_weight="1"
                            android:layout_marginEnd="2dp" android:paddingTop="30dp"
                            android:onClick="clickDataFilterAlarm"/>
                    <Button
                            android:text="@string/camera"
                            android:layout_width="fill_parent"
                            android:layout_height="146dp" android:id="@+id/camera"
                            android:drawableTop="@drawable/round_linked_camera_white_48"
                            android:layout_weight="1" android:layout_marginEnd="2dp" android:paddingTop="30dp"/>
                </TableRow>
                <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                    <Button
                            android:text="@string/lights"
                            android:layout_width="fill_parent"
                            android:layout_height="match_parent" android:id="@+id/lights"
                            android:drawableTop="@drawable/round_wb_incandescent_white_48"
                            android:layout_weight="1"
                            android:layout_marginEnd="2dp" android:paddingTop="30dp"/>
                    <Button
                            android:text="@string/speakers"
                            android:layout_width="fill_parent"
                            android:layout_height="146dp" android:id="@+id/speakers"
                            android:drawableTop="@drawable/round_speaker_white_48"
                            android:layout_weight="1" android:layout_marginEnd="2dp" android:paddingTop="30dp"/>
                </TableRow>
                <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                    <Button
                            android:text="@string/thermostats"
                            android:layout_width="101dp"
                            android:layout_height="match_parent" android:id="@+id/thermostats"
                            android:drawableTop="@drawable/round_ac_unit_white_48"
                            android:layout_weight="1"
                            android:layout_marginEnd="2dp" android:paddingTop="30dp"/>
                    <Button
                            android:text="@string/tvs"
                            android:layout_width="fill_parent"
                            android:layout_height="145dp" android:id="@+id/tvs"
                            android:drawableTop="@drawable/round_tv_white_48"
                            android:layout_weight="1" android:layout_marginEnd="2dp" android:paddingTop="30dp"/>
                </TableRow>
            </TableLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>